<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- General Settings Category -->
    <PreferenceCategory
        android:title="@string/preferences_category_general"
        android:icon="@drawable/ic_settings_general">

        <ListPreference
            android:key="pref_reference_script"
            android:title="@string/pref_title_reference_script"
            android:summary="@string/pref_summary_reference_script"
            android:entries="@array/reference_scripts_entries"
            android:entryValues="@array/reference_scripts_values"
            android:defaultValue="devanagari"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_default_mode"
            android:title="@string/pref_title_default_mode"
            android:summary="@string/pref_summary_default_mode"
            android:entries="@array/keyboard_modes_entries"
            android:entryValues="@array/keyboard_modes_values"
            android:defaultValue="brahmi"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!-- Appearance Settings Category -->
    <PreferenceCategory
        android:title="@string/preferences_category_appearance"
        android:icon="@drawable/ic_settings_appearance">

        <ListPreference
            android:key="pref_theme"
            android:title="@string/pref_title_theme"
            android:summary="@string/pref_summary_theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="light"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_key_shape"
            android:title="@string/pref_title_key_shape"
            android:summary="@string/pref_summary_key_shape"
            android:entries="@array/key_shape_entries"
            android:entryValues="@array/key_shape_values"
            android:defaultValue="square"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_font_family"
            android:title="@string/pref_title_font_family"
            android:summary="@string/pref_summary_font_family"
            android:entries="@array/font_family_entries"
            android:entryValues="@array/font_family_values"
            android:defaultValue="default"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_font_size"
            android:title="@string/pref_title_font_size"
            android:summary="@string/pref_summary_font_size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            android:defaultValue="16"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_key_size"
            android:title="@string/pref_title_key_size"
            android:summary="@string/pref_summary_key_size"
            android:entries="@array/key_size_entries"
            android:entryValues="@array/key_size_values"
            android:defaultValue="48"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:key="pref_keyboard_height_portrait"
            android:title="@string/pref_title_keyboard_height_portrait"
            android:summary="@string/pref_summary_keyboard_height_portrait"
            android:defaultValue="300"
            android:max="500"
            android:min="200"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="pref_keyboard_height_landscape"
            android:title="@string/pref_title_keyboard_height_landscape"
            android:summary="@string/pref_summary_keyboard_height_landscape"
            android:defaultValue="200"
            android:max="400"
            android:min="150"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

    <!-- Behavior Settings Category -->
    <PreferenceCategory
        android:title="@string/preferences_category_behavior"
        android:icon="@drawable/ic_settings_behavior">

        <SwitchPreferenceCompat
            android:key="pref_vibration"
            android:title="@string/pref_title_vibration"
            android:summary="@string/pref_summary_vibration"
            android:defaultValue="true" />

        <SeekBarPreference
            android:key="pref_vibration_duration"
            android:title="@string/pref_title_vibration_duration"
            android:summary="@string/pref_summary_vibration_duration"
            android:defaultValue="20"
            android:max="50"
            android:min="5"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_sound"
            android:title="@string/pref_title_sound"
            android:summary="@string/pref_summary_sound"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_auto_correct"
            android:title="@string/pref_title_auto_correct"
            android:summary="@string/pref_summary_auto_correct"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_suggestions"
            android:title="@string/pref_title_suggestions"
            android:summary="@string/pref_summary_suggestions"
            android:defaultValue="true" />

    </PreferenceCategory>

    <!-- Advanced Settings Category -->
    <PreferenceCategory
        android:title="@string/preferences_category_advanced"
        android:icon="@drawable/ic_settings_advanced">

        <Preference
            android:key="pref_reset"
            android:title="@string/pref_title_reset"
            android:summary="@string/pref_summary_reset"
            android:icon="@drawable/ic_reset" />

        <Preference
            android:key="pref_about"
            android:title="@string/pref_title_about"
            android:summary="@string/pref_summary_about"
            android:icon="@drawable/ic_about" />

    </PreferenceCategory>

</PreferenceScreen>
